/**
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// The image attachment metadata.
//
// Author: akaplanov@gmail.com (Kaplanov A.)

syntax = "proto2";

package attachment;

option java_package = "org.waveprotocol.box.attachment";
option java_outer_classname = "AttachmentProto";

message AttachmentsResponse {
  repeated AttachmentMetadata attachment = 1;
}

message AttachmentMetadata {
  required string attachmentId = 1;
  required string waveRef = 2;
  required string fileName = 3;
  required string mimeType = 4;
  required int64 size = 5;
  required string creator = 6;
  required string attachmentUrl = 7;
  required string thumbnailUrl = 8;
  optional ImageMetadata imageMetadata = 9;
  optional ImageMetadata thumbnailMetadata = 10;
  optional bool malware = 11;
}

message ImageMetadata {
  required int32 width = 1;
  required int32 height = 2;
}
